Spacing issues update

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body { margin: 0; font-family: Inter, "Helvetica Neue", sans-serif; }
 }
 
 .custom-container{
-    @apply container mx-auto px-4 md:px-0
+    @apply container mx-auto px-6 md:px-12
 }
 
 button{
